--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "react-toast": "^1.0.3",
     "react-toastify": "^9.1.3",
