--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-toast": "^1.0.3",
     "react-toastify": "^9.1.3",
+    "styled-components": "^6.0.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.3.1",
     "react-router-dom": "^6.14.1"
   }
 }
