--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@testing-library/dom": "^9.3.1",
+    "axios": "^1.5.1",
     "react-router-dom": "^6.14.1"
   }
 }
